Add more photos from Flickr

--- a/blog/0071.md
+++ b/blog/0071.md
@@ -5,3 +5,6 @@ Distance:	95.4 miles
 Route:	tracks/2014-06-18.geojson
 ---
 
+![landscape](https://farm6.staticflickr.com/5520/14545343744_e7a9ddb3bd.jpg "Wabash bike trail")
+
+![landscape](https://farm3.staticflickr.com/2914/14360417797_5f54c46689.jpg "Carson, Iowa")
