--- a/blog/0072.md
+++ b/blog/0072.md
@@ -1,6 +1,9 @@
 ---
-Title:	Atlantic
+Title:	Atlantic, Iowa
 Date:	2014-06-19T20:00:00+PDT
 Route:	tracks/2014-06-19.geojson
 ---
 
+![landscape](https://farm4.staticflickr.com/3883/14545346004_96feaa0a83.jpg "Atlantic bike shop")
+
+![landscape](https://farm4.staticflickr.com/3868/14546874955_0d7a800308.jpg "Atlantic Chamber of Commerce")
