--- a/blog/0073.md
+++ b/blog/0073.md
@@ -5,3 +5,18 @@ Distance:	13.8 miles
 Route:	tracks/2014-06-20.geojson
 ---
 
+![landscape](https://farm4.staticflickr.com/3860/14360230030_68dbd3912c.jpg "Iowa")
+
+![landscape](https://farm4.staticflickr.com/3857/14546877125_314594162b.jpg "Site of the first train robbery")
+
+![landscape](https://farm4.staticflickr.com/3912/14360279209_21c21bda04.jpg "Craig")
+
+![landscape](https://farm4.staticflickr.com/3887/14360285089_2fc81da2f3.jpg "Welcome to Stuart. Home of 1600 good eggs... and a few stinkers.")
+
+![portrait](https://farm6.staticflickr.com/5504/14567004803_69d2e7b660.jpg "Stuart Library and water tower")
+
+![landscape](https://farm3.staticflickr.com/2921/14543493181_467898055c.jpg "Librarians of Stuart")
+
+![portrait](https://farm3.staticflickr.com/2926/14360304808_635e3126fd.jpg "Norma at the Stuart Herald")
+
+![portrait](https://farm3.staticflickr.com/2915/14567006623_7270336434.jpg "Stuart church")
