--- a/blog/0074.md
+++ b/blog/0074.md
@@ -5,3 +5,12 @@ Distance:	50.3 miles
 Route:	tracks/2014-06-21.geojson
 ---
 
+![portrait](https://farm3.staticflickr.com/2936/14545362334_c1852ec220.jpg "Iowa")
+
+![landscape](https://farm3.staticflickr.com/2916/14543499881_6402890a26.jpg "Stuart Speedway")
+
+![landscape](https://farm4.staticflickr.com/3866/14360440907_ea9a5740d3.jpg "Brickworks in Adel")
+
+![portrait](https://farm6.staticflickr.com/5576/14360441247_d04fc84cc9.jpg "Adel water tower")
+
+![landscape](https://farm6.staticflickr.com/5547/14360442167_ee518b3ff5.jpg "Beaverdale Bicycle shop")
