--- a/blog/0075.md
+++ b/blog/0075.md
@@ -4,4 +4,8 @@ Date:	2014-06-22T20:00:00+PDT
 Route:	tracks/2014-06-22.geojson
 ---
 
+![portrait](https://farm4.staticflickr.com/3847/14360316698_57468ca813.jpg "High Tressle Bike Trail")
 
+![landscape](https://farm4.staticflickr.com/3874/14523814576_e91ce2fc2e.jpg "High Tressle Bike Trail")
+
+![portrait](https://farm6.staticflickr.com/5587/14523815656_373c456ac7.jpg "Wakonsa Bridge")
