--- a/blog/0076.md
+++ b/blog/0076.md
@@ -5,3 +5,12 @@ Distance:	51.6 miles
 Route:	tracks/2014-06-23.geojson
 ---
 
+![portrait](https://farm3.staticflickr.com/2919/14567022533_bd21e83641.jpg "Flooded flowers")
+
+![landscape](https://farm3.staticflickr.com/2930/14567023163_1989ca71bb.jpg "Iowa State Capitol")
+
+![landscape](https://farm4.staticflickr.com/3916/14546913255_8784df5c3a.jpg "RAGBRAI")
+
+![portrait](https://farm4.staticflickr.com/3898/14545987942_919dde8aff.jpg "Grinnell movie theatre")
+
+![portrait](https://farm3.staticflickr.com/2911/14567035663_f09c96ef29.jpg "Grinnell water tower")
