--- a/blog/0078.md
+++ b/blog/0078.md
@@ -5,3 +5,10 @@ Distance:	57.1 miles
 Route:	tracks/2014-06-25.geojson
 ---
 
+![landscape](https://farm6.staticflickr.com/5571/14545405214_586d8b3005.jpg "Amana colonies")
+
+![panorama](https://farm4.staticflickr.com/3835/14636147240_3bbb6e4669.jpg "Amana colonies")
+
+![portrait](https://farm4.staticflickr.com/3900/14546004512_404dbe6aa5.jpg "Iowa city")
+
+![landscape](https://farm4.staticflickr.com/3908/14567055083_10f4b3da71.jpg "Bob")
