--- a/blog/0079.md
+++ b/blog/0079.md
@@ -1,7 +1,18 @@
 ---
-Title:	The Mississippi
+Title:	To the Mississippi
 Date:	2014-06-26T20:00:00+PDT
 Distance:	65.1 miles
 Route:	tracks/2014-06-26.geojson
 ---
 
+![landscape](https://farm4.staticflickr.com/3922/14546939725_6ffb07c820.jpg "Cafe in West Liberty")
+
+![portrait](https://farm4.staticflickr.com/3864/14546012492_907f983b88.jpg "Wilton Candy Kitchen")
+
+![portrait](https://farm4.staticflickr.com/3850/14546942825_b3f08ab3bb.jpg "Inside Wilton Candy Kitchen")
+
+![landscape](https://farm3.staticflickr.com/2914/14360358878_3f533b6fed.jpg "The oldest ice cream/soda fountain")
+
+![landscape](https://farm3.staticflickr.com/2905/14360299510_6081d5a60a.jpg "The staff of Wilton Candy Kitchen")
+
+![landscape](https://farm3.staticflickr.com/2907/14546015972_29785863f9.jpg "Foot in the Mississippi")
