--- a/blog/0080.md
+++ b/blog/0080.md
@@ -5,3 +5,22 @@ Distance:	73.3 miles
 Route:	tracks/2014-06-27.geojson
 ---
 
+![portrait](https://farm6.staticflickr.com/5581/14523861226_4a23c25d0b.jpg "Davenport from the Arsenal")
+
+![landscape](https://farm4.staticflickr.com/3877/14546020842_0ee8616ae3.jpg "With the Mississippi")
+
+![landscape](https://farm4.staticflickr.com/3857/14545422714_13ab27ba65.jpg "Mike and Sue")
+
+![landscape](https://farm4.staticflickr.com/3887/14546022262_e30a4b1060.jpg "In Rock Island")
+
+![portrait](https://farm4.staticflickr.com/3860/14360497737_b287d0fb46.jpg "Canal towpath")
+
+![portrait](https://farm6.staticflickr.com/5594/14543558451_be163dc35a.jpg "Flowers and corn")
+
+![landscape](https://farm4.staticflickr.com/3912/14360499777_f3986c13d7.jpg "90 degrees west")
+
+![landscape](https://farm6.staticflickr.com/5318/14545425264_f6699d910a.jpg "Illinois")
+
+![landscape](https://farm4.staticflickr.com/3907/14360499997_e5c63f1ac8.jpg "Pie")
+
+![landscape](https://farm4.staticflickr.com/3915/14360501067_0b0069c8da.jpg "Friendly staff at the Purple Onion")
