--- a/blog/0081.md
+++ b/blog/0081.md
@@ -1,7 +1,16 @@
 ---
-Title:	Riding companion
+Title:	Nearing the end of the line
 Date:	2014-06-28T20:00:00+PDT
 Distance:	90.5 miles
 Route:	tracks/2014-06-28.geojson
 ---
 
+![portrait](https://farm6.staticflickr.com/5591/14360310940_cfdb6ac040.jpg "Mark with one of his bikes")
+
+![portrait](https://farm4.staticflickr.com/3893/14523870866_8261031193.jpg "Flowers")
+
+![landscape](https://farm3.staticflickr.com/2901/14546959955_afe1262f9b.jpg "Model railway in Mendota")
+
+![landscape](https://farm3.staticflickr.com/2901/14546964915_41d3769678.jpg "Train in Mendota")
+
+![landscape](https://farm3.staticflickr.com/2929/14567082493_2d63c54e7d.jpg "Alan, Bill and Ed")
