--- a/blog/0082.md
+++ b/blog/0082.md
@@ -5,3 +5,10 @@ Distance:	57.2 miles
 Route:	tracks/2014-06-29.geojson
 ---
 
+![portrait](https://farm4.staticflickr.com/3835/14360381018_722bfa12e2.jpg "Tristan cycling from Portland, Oregon to Portland, Maine")
+
+![portrait](https://farm6.staticflickr.com/5499/14567089043_97c9cb0183.jpg "Heading into Chicago")
+
+![portrait](https://farm3.staticflickr.com/2926/14546043882_d6b96359cc.jpg "State Street")
+
+![portrait](https://farm6.staticflickr.com/5537/14567092093_c337e03242.jpg "Chicago skyline")
