--- a/blog/0083.md
+++ b/blog/0083.md
@@ -4,3 +4,36 @@ Date:	2014-07-04T20:00:00+PDT
 Route:	tracks/2014-07-04.geojson
 ---
 
+![portrait](https://farm3.staticflickr.com/2896/14360521047_830ddb48b0.jpg "Hair Cuttery")
+
+![landscape](https://farm6.staticflickr.com/5592/14360543237_4e6a58dca1.jpg "Chicago Police")
+
+![landscape](https://farm3.staticflickr.com/2901/14632325685_c02d9832b4.jpg "Lightning")
+
+![portrait](https://farm4.staticflickr.com/3899/14445717868_ab2581165f.jpg "Marianos")
+
+![landscape](https://farm6.staticflickr.com/5574/14652243473_44009e554b.jpg "Outside Soldier Field on 1st July")
+
+![landscape](https://farm3.staticflickr.com/2915/14445720389_7ee036f597.jpg "The USA vs Belgium at the World Cup")
+
+![panorama](https://farm3.staticflickr.com/2931/14820062831_3935d7ca43.jpg "One Nation. One Team")
+
+![landscape](https://farm4.staticflickr.com/3901/14652261683_5c95ac5a63.jpg "The fantastic Adler Skywatch team")
+
+![landscape](https://farm6.staticflickr.com/5153/14445942597_590412f428.jpg "Fish in the crystal clear waters of Lake Michigan")
+
+![landscape](https://farm6.staticflickr.com/5547/14445731519_e248fc9a2a.jpg "Chicago from the north")
+
+![landscape](https://farm4.staticflickr.com/3871/14445699660_5e792e6feb.jpg "Pakka, Urs, and me")
+
+![panorama](https://farm3.staticflickr.com/2899/14636513140_2d69ccdcc7.jpg "Chicago on July 4th")
+
+![landscape](https://farm3.staticflickr.com/2896/14445751769_a97388b997.jpg "International friends")
+
+![landscape](https://farm4.staticflickr.com/3921/14632376825_8ff3d7f2cc.jpg "The 'L' train")
+
+![portrait](https://farm6.staticflickr.com/5544/14631935752_dced91ed3b.jpg "Divvy bikes")
+
+![landscape](https://farm4.staticflickr.com/3894/14630275274_fb09342a0e.jpg "The bean")
+
+![landscape](https://farm4.staticflickr.com/3840/14631955482_b76f8a3bfd.jpg "Taste Of Chicago street food festival")
