--- a/blog/0084.md
+++ b/blog/0084.md
@@ -5,3 +5,6 @@ Distance:	21.9 miles
 Route:	tracks/2014-07-09.geojson
 ---
 
+![landscape](https://farm6.staticflickr.com/5476/14652337413_b587e8feb6.jpg "Chicago from the top")
+
+![landscape](https://farm4.staticflickr.com/3914/14631975572_c9b80338a1.jpg "The Art of the Bicycle Seat")
