--- a/blog/0086.md
+++ b/blog/0086.md
@@ -5,3 +5,12 @@ Distance:	56.2 miles
 Route:	tracks/2014-07-13.geojson
 ---
 
+![portrait](https://farm4.staticflickr.com/3845/14750103244_d098c66157.jpg "Irrigation")
+
+![portrait](https://farm4.staticflickr.com/3859/14749281341_4a6640502e.jpg "Chocolate Cafe in South Bend")
+
+![portrait](https://farm4.staticflickr.com/3854/14565758960_17cac981b6.jpg "An old house")
+
+![landscape](https://farm4.staticflickr.com/3880/14749284011_bf5658897f.jpg "Amish washing line")
+
+![landscape](https://farm3.staticflickr.com/2936/14772315543_9c9ca15595.jpg "Ligonier")
