--- a/blog/0088.md
+++ b/blog/0088.md
@@ -6,4 +6,10 @@ Route:	tracks/2014-07-15.geojson
 ---
 
 
-I need to finish typing up my notes from Cheyenne to Boston. Meanwhile I have written up my trip in 2015 from Liverpool to Istanbul.
+![landscape](https://farm6.staticflickr.com/5595/14565811119_655c247817.jpg "Bird at the border")
+
+![landscape](https://farm6.staticflickr.com/5580/14566020317_c38a464a46.jpg "Welcome to Ohio. Mile Zero.")
+
+![landscape](https://farm3.staticflickr.com/2919/14750119394_17f0da6a0e.jpg "Ohio")
+
+![portrait](https://farm3.staticflickr.com/2910/14565815918_f86f260510.jpg "Le Tour in Napoleon")
