--- a/blog/0089.md
+++ b/blog/0089.md
@@ -5,3 +5,12 @@ Distance:	41.1 miles
 Route:	tracks/2014-07-16.geojson
 ---
 
+![landscape](https://farm3.staticflickr.com/2915/14566023247_bd9f358f56.jpg "A French/Belgian/British peleton pretending to be American")
+
+![landscape](https://farm3.staticflickr.com/2934/14772336103_f601c0887a.jpg "Grandmas's General Store")
+
+![landscape](https://farm3.staticflickr.com/2898/14729472706_f222f2414a.jpg "A cornucopia of corn.")
+
+![portrait](https://farm3.staticflickr.com/2924/14749310481_94f75a357c.jpg "Ohio bike route")
+
+![landscape](https://farm4.staticflickr.com/3924/14752472735_77c87a6901.jpg "Friendly bike shop in Whitehouse, Ohio")
