--- a/blog/0091.md
+++ b/blog/0091.md
@@ -1,7 +1,10 @@
 ---
-Title:	Livonia Parkrun
+Title:	Livonia parkrun and back to Ohio
 Date:	2014-07-19T20:00:00+PDT
 Distance:	104.7 miles
 Route:	tracks/2014-07-19.geojson
 ---
 
+![landscape](https://farm4.staticflickr.com/3891/14565840348_61047410f7.jpg "The friendly crowd at coffee after the Livonia parkrun.")
+
+![portrait](https://farm3.staticflickr.com/2925/14729496186_1896e30cd0.jpg "Don't STOP believing")
