--- a/blog/0092.md
+++ b/blog/0092.md
@@ -1,7 +1,20 @@
 ---
-Title:	Cleveland
+Title:	North Coast Inland Route
 Date:	2014-07-20T20:00:00+PDT
 Distance:	96.4 miles
 Route:	tracks/2014-07-20.geojson
 ---
 
+![portrait](https://farm6.staticflickr.com/5595/14752494285_b2c9755e28.jpg "North Coast Inland Route")
+
+![portrait](https://farm6.staticflickr.com/5576/14772366653_c5cf20daea.jpg "Meeting people on the trail")
+
+![landscape](https://farm6.staticflickr.com/5581/14565848779_d9b30dcca5.jpg "Train station restoration crew")
+
+![landscape](https://farm3.staticflickr.com/2936/14729501836_fac4560bdb.jpg "Friendly cyclist in Oberlin")
+
+![portrait](https://farm6.staticflickr.com/5593/14752189842_057873167c.jpg "Street in Cleveland")
+
+![landscape](https://farm4.staticflickr.com/3881/14772370293_d7086ee030.jpg "Cleveland and Lake Erie")
+
+![landscape](https://farm3.staticflickr.com/2927/14565855069_e6c7b98f7f.jpg "Engagement party in the park")
