--- a/blog/0093.md
+++ b/blog/0093.md
@@ -1,7 +1,20 @@
 ---
-Title:	Pennsylvania
+Title:	Cleveland to Pennsylvania
 Date:	2014-07-21T20:00:00+PDT
 Distance:	110.7 miles
 Route:	tracks/2014-07-21.geojson
 ---
 
+![portrait](https://farm4.staticflickr.com/3888/14566061747_a218da4242.jpg "Greg the welcoming Brit")
+
+![landscape](https://farm6.staticflickr.com/5589/14752197242_54839f078f.jpg "Cleveland")
+
+![portrait](https://farm4.staticflickr.com/3867/14566065827_c94b2086df.jpg "Art Gallery")
+
+![portrait](https://farm4.staticflickr.com/3922/14729513896_b35696690c.jpg "Garfield Mausoleum")
+
+![landscape](https://farm6.staticflickr.com/5555/14566070757_b9cae66c57.jpg "Friendly driver")
+
+![landscape](https://farm3.staticflickr.com/2902/14565830390_506c225a63.jpg "Welcome to Pennsylvania - Seaway Trail Z")
+
+![landscape](https://farm6.staticflickr.com/5560/14729518946_ebdedd5ac3.jpg "The Old State Line")
