--- a/blog/0094.md
+++ b/blog/0094.md
@@ -1,7 +1,18 @@
 ---
-Title:	Buffalo
+Title:	PA to NY - my longest day
 Date:	2014-07-22T20:00:00+PDT
 Distance:	120.4 miles
 Route:	tracks/2014-07-22.geojson
 ---
 
+![portrait](https://farm6.staticflickr.com/5583/14565868579_1e3c0a8f1f.jpg "Penny Farthing in North East, PA")
+
+![landscape](https://farm4.staticflickr.com/3862/14752209942_01f47cf746.jpg "Welcome to New York")
+
+![portrait](https://farm6.staticflickr.com/5575/14752212562_48f52eeea9.jpg "Bike group in Buffalo")
+
+![landscape](https://farm6.staticflickr.com/5562/14772396453_54b1f5d89c.jpg "Bike buddy - the least practical bicycle")
+
+![landscape](https://farm4.staticflickr.com/3838/14729530706_12ac558b07.jpg "Group C - the icecream ride")
+
+![portrait](https://farm4.staticflickr.com/3893/14566086287_a4fbbf4892.jpg "Hosts in Buffalo")
