--- a/blog/0095.md
+++ b/blog/0095.md
@@ -5,3 +5,10 @@ Distance:	76.1 miles
 Route:	tracks/2014-07-23.geojson
 ---
 
+![landscape](https://farm6.staticflickr.com/5583/14752534085_41144c999c.jpg "Me at Niagara Falls")
+
+![portrait](https://farm3.staticflickr.com/2936/14729534786_6032b34e20.jpg "Bike at Niagara")
+
+![landscape](https://farm6.staticflickr.com/5559/14565857500_893ed4aa9c.jpg "Wonderful people of Batavia")
+
+I made [The Batavian](http://www.thebatavian.com/howard-owens/brit-recreating-cross-country-bike-trip-1884-gets-warm-reception-batavia/43844).
