--- a/blog/0096.md
+++ b/blog/0096.md
@@ -5,3 +5,18 @@ Distance:	71.5 miles
 Route:	tracks/2014-07-24.geojson
 ---
 
+![landscape](https://farm3.staticflickr.com/2899/14752547035_ab99e1e0bf.jpg "The road from Batavia")
+
+![portrait](https://farm4.staticflickr.com/3917/14752551665_1af985599f.jpg "Gas station guy. We had a conversation about Mo Farah!")
+
+![portrait](https://farm6.staticflickr.com/5591/14752243122_80a828876b.jpg "Upstate New York")
+
+![portrait](https://farm3.staticflickr.com/2919/14750217614_fa1614e9e4.jpg "Build your own frozen yoghurt")
+
+![portrait](https://farm4.staticflickr.com/3872/14752558425_ff21cb5a4f.jpg "Famous hot dogs")
+
+![landscape](https://farm4.staticflickr.com/3870/14750220354_488e651618.jpg "Canadaigua")
+
+![landscape](https://farm6.staticflickr.com/5570/14565911778_60a17b6002.jpg "Canadaigua lake")
+
+![landscape](https://farm4.staticflickr.com/3907/14749403961_12691c0467.jpg "The chicken co-op")
