--- a/blog/0097.md
+++ b/blog/0097.md
@@ -1,7 +1,14 @@
 ---
-Title:	Syracuse
+Title:	Lost in a pleasant valley on the way to Syracuse
 Date:	2014-07-25T20:00:00+PDT
 Distance:	72.3 miles
 Route:	tracks/2014-07-25.geojson
 ---
 
+![landscape](https://farm6.staticflickr.com/5577/14565884800_e2e66c3e82.jpg "Seneca Falls lake")
+
+![portrait](https://farm4.staticflickr.com/3896/14752262572_e3acf64165.jpg "Pleasant Valley road")
+
+![portrait](https://farm4.staticflickr.com/3890/14565925539_2817d7632a.jpg "J.P. who showed me the correct way")
+
+![portrait](https://farm3.staticflickr.com/2933/14729577746_7e71f470fe.jpg "Syracuse Youth Hostel staff and a guest")
