--- a/blog/0099.md
+++ b/blog/0099.md
@@ -1,7 +1,16 @@
 ---
-Title:	Schenectady
+Title:	Following the canal trail to Schenectady
 Date:	2014-07-27T20:00:00+PDT
 Distance:	84.7 miles
 Route:	tracks/2014-07-27.geojson
 ---
 
+![portrait](https://farm4.staticflickr.com/3911/14615625177_d2eabb9836.jpg "Upstate New York")
+
+![landscape](https://farm4.staticflickr.com/3854/14821971953_5f1b46cf17.jpg "Canal")
+
+![landscape](https://farm6.staticflickr.com/5565/14801774732_b93a6e544d.jpg "Canal trail without the canal")
+
+![landscape](https://farm4.staticflickr.com/3911/14615599087_73fcb8f280.jpg "Heading towards Amsterdam")
+
+![landscape](https://farm4.staticflickr.com/3854/14799745264_17ba5a2e91.jpg "Tree down")
