--- a/blog/0100.md
+++ b/blog/0100.md
@@ -1,7 +1,18 @@
 ---
-Title:	Into Massachusetts
+Title:	On to the final State
 Date:	2014-07-28T20:00:00+PDT
 Distance:	73.9 miles
 Route:	tracks/2014-07-28.geojson
 ---
 
+![landscape](https://farm3.staticflickr.com/2908/14615565737_f145482a68.jpg "Bike trail view")
+
+![landscape](https://farm3.staticflickr.com/2915/14798735111_45d3619480.jpg "Schodack")
+
+![portrait](https://farm4.staticflickr.com/3889/14801506162_1f58e27a09.jpg "Friendly Dutta")
+
+![portait](https://farm6.staticflickr.com/5592/14821911583_1ab8d96a38.jpg "The welcoming Peter and Priscilla")
+
+![portrait](https://farm4.staticflickr.com/3907/14821903363_ca2f5e5107.jpg "New York State after the rain")
+
+![landscape](https://farm6.staticflickr.com/5556/14798755061_130af02e77.jpg "Welcome to Massachusetts")
