--- a/blog/0101.md
+++ b/blog/0101.md
@@ -5,3 +5,17 @@ Distance:	101.6 miles
 Route:	tracks/2014-07-29.geojson
 ---
 
+
+![portrait](https://farm6.staticflickr.com/5560/14801704332_fdf3e2dcfb.jpg "Massachusetts architecture")
+
+![portrait](https://farm6.staticflickr.com/5560/14801704332_fdf3e2dcfb.jpg "Stockbridge for breakfast")
+
+![landscape](https://farm3.staticflickr.com/2914/14615431188_e9996c3c5b.jpg "Massachusetts")
+
+![portrait](https://farm4.staticflickr.com/3914/14798928721_cd75aa9a32.jpg "Massachusetts")
+
+![portrait](https://farm6.staticflickr.com/5572/14615373099_e74aff2794.jpg "Early evening at the lake")
+
+![landscape](https://farm6.staticflickr.com/5580/14802015505_ba86e1b015.jpg "Garden flowers")
+
+![portrait](https://farm4.staticflickr.com/3896/14798897891_8d470482f9.jpg "Willa")
