--- a/blog/0077.md
+++ b/blog/0077.md
@@ -5,3 +5,18 @@ Distance:	59.2 miles
 Route:	tracks/2014-06-24.geojson
 ---
 
+![landscape](https://farm4.staticflickr.com/3911/14545392114_1441451782.jpg "Iowa landscape")
+
+![landscape](https://farm4.staticflickr.com/3862/14360276540_3848152315.jpg "Brooklyn - community of flags")
+
+![landscape](https://farm6.staticflickr.com/5505/14360279210_3f002ce3a0.jpg "Three generations of Iowan women")
+
+![landscape](https://farm4.staticflickr.com/3844/14545997462_40edfc6c23.jpg "The Scandretts")
+
+![landscape](https://farm4.staticflickr.com/3894/14546927715_b3e225ac7e.jpg "Pie")
+
+![landscape](https://farm4.staticflickr.com/3861/14567046073_dfaf989355.jpg "Turtle on the road")
+
+![landscape](https://farm3.staticflickr.com/2938/14567048393_1f7588c9f3.jpg "Amana trees")
+
+![landscape](https://farm3.staticflickr.com/2938/14545403804_4c3b31a8e2.jpg "Evening in Amana")
