--- a/blog/0085.md
+++ b/blog/0085.md
@@ -5,3 +5,8 @@ Distance:	66.1 miles
 Route:	tracks/2014-07-12.geojson
 ---
 
+![landscape](https://farm4.staticflickr.com/3864/14749276501_7c0cb3aae1.jpg "Looking back to Chicago from the Indiana Dunes")
+
+![portrait](https://farm6.staticflickr.com/5572/14752436145_ff3448c411.jpg "Random friendly American lady")
+
+![landscape](https://farm4.staticflickr.com/3917/14565996577_325aaf5210.jpg "My lovely hosts with an award winning dog")
