--- a/blog/0098.md
+++ b/blog/0098.md
@@ -1,7 +1,18 @@
 ---
-Title:	Eerie Canal to Utica
+Title:	Erie Canal to Utica
 Date:	2014-07-26T20:00:00+PDT
 Distance:	66.9 miles
 Route:	tracks/2014-07-26.geojson
 ---
 
+![landscape](https://farm4.staticflickr.com/3890/14566135997_2d71ef6cce.jpg "Old Erie Canal trail")
+
+![landscape](https://farm4.staticflickr.com/3906/14750240574_86e24c2fc8.jpg "Old Erie Canal trail")
+
+![landscape](https://farm4.staticflickr.com/3911/14752273332_5ed42fd7a3.jpg "Restored car")
+
+![landscape](https://farm6.staticflickr.com/5596/14729586626_8da07cd57f.jpg "Tractor")
+
+![landscape](https://farm3.staticflickr.com/2938/14750246814_0625352cd1.jpg "On the canal trail. I set up my camera on a 10 second timer and ran back and got on my bike.")
+
+![landscape](https://farm4.staticflickr.com/3848/14615632877_225bd505c5.jpg "Utica")
