--- a/blog/0102.md
+++ b/blog/0102.md
@@ -1,5 +1,5 @@
 ---
-Title:	To the Atlantic
+Title:	Last push to the Atlantic
 Date:	2014-07-30T20:00:00+PDT
 Distance:	69.8 miles
 Route:	tracks/2014-07-30.geojson
