--- a/blog/0103.md
+++ b/blog/0103.md
@@ -11,7 +11,7 @@ It was my last day in America. I headed to downtown.
 
 At Golden Spike in Utah a lady who worked at the Museum of Fine Arts had told me to visit when I got to Boston. I cycled over there and asked for her at reception. It turned out she wasn't answering her phone and was thought to be in a meeting. I left a message but headed off. 
 
-I needed a Massachusetts sticker for my bike and had lots of postcards to write to all the people I'd promised across the country. On Commonwealth Avenue I found the Bay Bay Bicycle shop who were, strangely, down some stairs in a basement. Not the easiest place to take a laden bike. Also, they had a sign saying "no bicycles" on the railings on the street outside. Despite the less than friendly outward appearance, inside they were friendly and provided me with a sticker to represent my final State.
+I needed a Massachusetts sticker for my bike and had lots of postcards to write to all the people I'd promised across the country. On Commonwealth Avenue I found Back Bay Bicycles who were, strangely, down some stairs in a basement. Not the easiest place to take a laden bike. Also, they had a sign saying "no bicycles" on the railings on the street outside. Despite the less than friendly outward appearance, inside they were friendly and provided me with a sticker to represent my final State.
 
 ![portrait](https://farm4.staticflickr.com/3913/14615283539_d78c3ee79a.jpg "Back Bay bicycles")
 
@@ -23,7 +23,7 @@ Jessica's route took me to the Alford Street bridge but my GPS kept trying to ta
 
 ![landscape](https://farm3.staticflickr.com/2923/14821762583_2a726aa3c9.jpg "Braynor and Hamilton on the way to the airport")
 
-Through industrial land I headed and eventually found a bike lane going into Boston Logan airport. This trip has been a real eye-opener on how it is possible to cycle to airports. I'd cycled to London Heathrow, from San Francisco and now to Boston Logan. 
+Through industrial land I rode and eventually found a bike lane going into Boston Logan airport. This trip has been a real eye-opener on how it is possible to cycle to airports. I'd cycled to London Heathrow, from San Francisco and now to Boston Logan. 
 
 At Departures I took apart my bike and put it in the rather dishevelled CTC bike bag that had doubled as my tent groundsheet across America. My two panniers went inside the big blue IKEA bag so that they counted as one item of hold luggage. At the check in desk the lady looked worried. She thought I had two hold items and I was clearly only paid for one. I was just about to get out my copy of Virgin Atlantic's excellent bike policy, that I'd been carrying around since April, when her colleague leaned over and told her the bike was free. I don't suppose many people take up their bike policy.
 
