Note about wedding deadline

--- a/blog/0103.md
+++ b/blog/0103.md
@@ -27,6 +27,8 @@ Through industrial land I rode and eventually found a bike lane going into Bosto
 
 At Departures I took apart my bike and put it in the rather dishevelled CTC bike bag that had doubled as my tent groundsheet across America. My two panniers went inside the big blue IKEA bag so that they counted as one item of hold luggage. At the check in desk the lady looked worried. She thought I had two hold items and I was clearly only paid for one. I was just about to get out my copy of Virgin Atlantic's excellent bike policy, that I'd been carrying around since April, when her colleague leaned over and told her the bike was free. I don't suppose many people take up their bike policy.
 
-Goodbye America! It has been fun. You've been super friendly and generous.
+Stevens reached Boston on August 4th but I'd had a different deadline to make. In my case I had my niece's wedding to attend on August 2nd so my flight was on July 31st. I had been cutting it fine but had made it.
+
+Goodbye America! It has been awesome. You've been super friendly and generous.
 
 Is that the end? I'd only set out to do Thomas Stevens's US route but since coming down the Rockies I've contemplated continuing his European leg from Liverpool to Istanbul. Watch this space.
