Add some panoramas

--- a/blog/0034.md
+++ b/blog/0034.md
@@ -21,6 +21,8 @@ My eye was caught by a colourful yard and taking a closer look I saw amazing "tr
 
 ![portrait](https://farm3.staticflickr.com/2907/14193820392_21dfebfed2_c.jpg "Jerry wasn't limited to glass insulators. He also used wine glasses.")
 
+![panorama](https://farm6.staticflickr.com/5585/14846819323_1ba9bfcf05.jpg "Jerry's art in Montello")
+
 I headed to the __Cowboy Bar__ to get food. The barman - Jonathan - was originally from out east then moved to Washington then bought some land he hadn't see in Montello and moved here. This was similar to the man who ran the motel who had bought it on eBay for $400. The common theme was that they found cities too large for them to be comfortable. So they'd moved to a hamlet in the middle of nowhere.
 
 ![landscape](https://farm8.staticflickr.com/7459/14009759007_bee50b5207_z.jpg "Barman at the Cowboy Bar")
