--- a/blog/0092.md
+++ b/blog/0092.md
@@ -15,6 +15,6 @@ Route:	tracks/2014-07-20.geojson
 
 ![portrait](https://farm6.staticflickr.com/5593/14752189842_057873167c.jpg "Street in Cleveland")
 
-![landscape](https://farm4.staticflickr.com/3881/14772370293_d7086ee030.jpg "Cleveland and Lake Erie")
+![panorama](https://farm4.staticflickr.com/3897/14808786666_4959e92f59.jpg "Cleveland and Lake Erie")
 
 ![landscape](https://farm3.staticflickr.com/2927/14565855069_e6c7b98f7f.jpg "Engagement party in the park")
