--- a/blog/0095.md
+++ b/blog/0095.md
@@ -9,6 +9,8 @@ Route:	tracks/2014-07-23.geojson
 
 ![portrait](https://farm3.staticflickr.com/2936/14729534786_6032b34e20.jpg "Bike at Niagara")
 
+![panorama](https://farm4.staticflickr.com/3848/14831538422_3699bb3a37.jpg "Niagara Falls")
+
 ![landscape](https://farm6.staticflickr.com/5559/14565857500_893ed4aa9c.jpg "Wonderful people of Batavia")
 
 I made [The Batavian](http://www.thebatavian.com/howard-owens/brit-recreating-cross-country-bike-trip-1884-gets-warm-reception-batavia/43844).
