--- a/blog/0096.md
+++ b/blog/0096.md
@@ -15,8 +15,10 @@ Route:	tracks/2014-07-24.geojson
 
 ![portrait](https://farm4.staticflickr.com/3872/14752558425_ff21cb5a4f.jpg "Famous hot dogs")
 
-![landscape](https://farm4.staticflickr.com/3870/14750220354_488e651618.jpg "Canadaigua")
+![panorama](https://farm6.staticflickr.com/5587/14832082895_0ffe48a91a.jpg "On the way to Canandaigua")
 
-![landscape](https://farm6.staticflickr.com/5570/14565911778_60a17b6002.jpg "Canadaigua lake")
+![landscape](https://farm4.staticflickr.com/3870/14750220354_488e651618.jpg "Canandaigua")
+
+![landscape](https://farm6.staticflickr.com/5570/14565911778_60a17b6002.jpg "Canandaigua lake")
 
 ![landscape](https://farm4.staticflickr.com/3907/14749403961_12691c0467.jpg "The chicken co-op")
