--- a/blog/0097.md
+++ b/blog/0097.md
@@ -7,6 +7,10 @@ Route:	tracks/2014-07-25.geojson
 
 ![landscape](https://farm6.staticflickr.com/5577/14565884800_e2e66c3e82.jpg "Seneca Falls lake")
 
+![panorama](https://farm3.staticflickr.com/2936/14832121775_a890c96599.jpg "Upstate New York")
+
+![panorama](https://farm3.staticflickr.com/2934/14829056671_d950812d3d.jpg "Upstate New York")
+
 ![portrait](https://farm4.staticflickr.com/3896/14752262572_e3acf64165.jpg "Pleasant Valley road")
 
 ![portrait](https://farm4.staticflickr.com/3890/14565925539_2817d7632a.jpg "J.P. who showed me the correct way")
