--- a/blog/0102.md
+++ b/blog/0102.md
@@ -33,6 +33,8 @@ I was alone. There was nobody to share my emotions with. I hung around the beach
 
 ![portrait](https://farm4.staticflickr.com/3906/14615262790_22706f7ce4.jpg "At the Atlantic Ocean. I haven't had time to shave.")
 
+![panorama](https://farm4.staticflickr.com/3853/14851992142_8d178729f7.jpg "Elevation profile of my trip")
+
 After a sit down to contemplate the journey, and the sudden realisation of how big my beard had got, I got back on my bike and headed back to Cambridge to meet Doug. On the way I got frustrated by runners with headphones running down the middle of the riverside cycle track (not in their own pedestrian lane and unable to hear you due to music). I also got chased by a man who had been cycling the other way but saw my panniers and decided he needed to talk. It turned out he'd studied at the University of Leeds years ago and knew some of my local bike shops. He had suspected I'd crossed the country and gave me a hearty congratulations before riding off to catch up with the other people he'd been riding with.
 
 Doug and his family were excellent hosts on my last, celebratory, night in the US. I'm glad I got to end my trip with them rather than in some anonymous motel.
