--- a/blog/0103.md
+++ b/blog/0103.md
@@ -11,6 +11,8 @@ It was my last day in America. I headed to downtown.
 
 At Golden Spike in Utah a lady who worked at the Museum of Fine Arts had told me to visit when I got to Boston. I cycled over there and asked for her at reception. It turned out she wasn't answering her phone and was thought to be in a meeting. I left a message but headed off. 
 
+![panorama](https://farm3.staticflickr.com/2923/14645530880_58a49372b8.jpg "Museum of Fine Art")
+
 I needed a Massachusetts sticker for my bike and had lots of postcards to write to all the people I'd promised across the country. On Commonwealth Avenue I found Back Bay Bicycles who were, strangely, down some stairs in a basement. Not the easiest place to take a laden bike. Also, they had a sign saying "no bicycles" on the railings on the street outside. Despite the less than friendly outward appearance, inside they were friendly and provided me with a sticker to represent my final State.
 
 ![portrait](https://farm4.staticflickr.com/3913/14615283539_d78c3ee79a.jpg "Back Bay bicycles")
