Adding Cyrillic names in Serbia

--- a/blog/2015041.md
+++ b/blog/2015041.md
@@ -10,11 +10,11 @@ It was a Sunday morning and I was smelling bit. The little local shop was closed
 
 Eventually the church bells rang for morning service and I headed off down the hill towards the border. I approached the Croatian exit point a little unsure if I was allowed on this road on a bicycle but they said it was OK; I'm not sure where else I thought I'd be able to cross the Danube. Over the river I reached the Serbian border control. There wasn't really a queue at this time on a Sunday morning so it was fairly quick. As I left the border control there were actually road signs for cyclists detailing the [Eurovelo 6](http://www.eurovelo.com/en/eurovelos/eurovelo-6) route through Serbia. They ended with a sign saying something like:
 
-"May the road rise to meet you and may the wind always be at your back"
+> May the road rise to meet you and may the wind always be at your back
 
 Just like every country I'd been in so far I was a little nervous of what to expect, not least because of currency/language changes, but this one sign did help to relax me a little.
 
-I headed to the edge of Ba&#269;ka Palanka. Although I had no Serbian currency, I did have my food/drink supplies so decided to turn right and carry on rather than head into the town. A little way along the road I spotted a cyclist with panniers by the gates to a cemetary. Following my usual rule I stopped to say hello. I'd met Aurelie - a cyclist from Belgium who had stayed in Ilok last night. She had ridden along the EV6 from France so it turned out we'd been more or less in parallel for the past few weeks. She was heading to Novi Sad/Petrovaradin like me and, thinking I'd quite like some company on my first day in Serbia, I asked if it would be OK for me to cycle with her. If nothing else I hoped it'd make me feel a little safer with the Serbian drivers. She seemed to be OK with the suggestion and I told her I wouldn't be offended if she wanted to cycle off ahead by herself. Like Stevens, I now had a cycling companion for this part of the route.
+I headed to the edge of Ba&#269;ka Palanka (&#1041;&#1072;&#1095;&#1082;&#1072; &#1055;&#1072;&#1083;&#1072;&#1085;&#1082;&#1072;). Although I had no Serbian currency, I did have my food/drink supplies so decided to turn right and carry on rather than head into the town. A little way along the road I spotted a cyclist with panniers by the gates to a cemetary. Following my usual rule I stopped to say hello. I'd met Aurelie - a cyclist from Belgium who had stayed in Ilok last night. She had ridden along the EV6 from France so it turned out we'd been more or less in parallel for the past few weeks. She was heading to Novi Sad/Petrovaradin like me and, thinking I'd quite like some company on my first day in Serbia, I asked if it would be OK for me to cycle with her. If nothing else I hoped it'd make me feel a little safer with the Serbian drivers. She seemed to be OK with the suggestion and I told her I wouldn't be offended if she wanted to cycle off ahead by herself. Like Stevens, I now had a cycling companion for this part of the route.
 
 ![landscape](https://farm1.staticflickr.com/538/19266170830_42ab0afb40.jpg "The brilliant Aurelie")
 
@@ -28,11 +28,11 @@ After lunch we tried finding the route again but it turned out to be more of a f
 
 ![portrait](https://farm4.staticflickr.com/3731/19458023691_7cd165ac2a.jpg "Laszlo and his dog")
 
-On reaching Novi Sad we found a good cycle lane and crowds of people heading towards a paid beach area. Aurelie said she'd like to swim in the river and I agreed that that was a good idea as I was starting to fry in the heat. Rather than opt for the paid beach we noticed some people were heading to a free beach in the woods further up the path. We followed them and found a lovely little wooded beach where we parked up and bathed in the muddy waters. Despite the murkiness of the water - which was in its sixth country now - it was very cooling. The current was pretty strong which meant you had to keep swimming to make sure you didn't float off to Belgrade. 
+On reaching Novi Sad (&#1053;&#1086;&#1074;&#1080; &#1057;&#1072;&#1076;) we found a good cycle lane and crowds of people heading towards a paid beach area. Aurelie said she'd like to swim in the river and I agreed that that was a good idea as I was starting to fry in the heat. Rather than opt for the paid beach we noticed some people were heading to a free beach in the woods further up the path. We followed them and found a lovely little wooded beach where we parked up and bathed in the muddy waters. Despite the murkiness of the water - which was in its sixth country now - it was very cooling. The current was pretty strong which meant you had to keep swimming to make sure you didn't float off to Belgrade. 
 
 ![landscape](https://farm1.staticflickr.com/366/19427684756_60a03f332f.jpg "Aurelie by the Danube")
 
-After drying off we headed along the cycle path into Novi Sad and across the bridge to Petrovaradin where we found the fantastic VaradInn hostel. It was lovely and great value. Tijana, the host, was really friendly and answered all our questions and let us get settled in. Later she was joined by Lela, the owner, who was also really friendly.
+After drying off we headed along the cycle path into Novi Sad and across the bridge to Petrovaradin (&#1055;&#1077;&#1090;&#1088;&#1086;&#1074;&#1072;&#1088;&#1072;&#1076;&#1080;&#1085;) where we found the fantastic VaradInn hostel. It was lovely and great value. Tijana, the host, was really friendly and answered all our questions and let us get settled in. Later she was joined by Lela, the owner, who was also really friendly.
 
 ![landscape](https://farm1.staticflickr.com/464/18831331584_bd7841e1a6.jpg "Tijana and Lela at the VaradInn")
 
