--- a/blog/2015042.md
+++ b/blog/2015042.md
@@ -11,11 +11,11 @@ I went up to the fort with Aurelie to have a look around. The fort was very impr
 
 ![portrait](https://farm4.staticflickr.com/3687/18831346084_a49c6b6d0e.jpg "Petrovaradin")
 
-![landscape](https://farm1.staticflickr.com/471/19458153041_7780f46f29.jpg "View across to Novi Sad")
+![landscape](https://farm1.staticflickr.com/471/19458153041_7780f46f29.jpg "View across to Novi Sad (&#1053;&#1086;&#1074;&#1080; &#1057;&#1072;&#1076;)")
 
 ![panorama](https://pbs.twimg.com/media/CHiNFUgWEAAENPR.jpg:large "View across the Danube")
 
-Time was moving on and I said my goodbyes to Aurelie and thanked her for the company. She said we might see each other again although I was heading for a different hostel in Belgrade to the one she was booked into. With a heavy heart I left my new friends and cycled out of Petrovaradin. [Just like Stevens](http://www.strudel.org.uk/blog/stevens/000179.shtml) I had to trundle my way wearily up a shoulder of the Fru&scaron;ka Gora Mountains for a few kilometres. At the summit I was happy to find a fruit seller and promptly bought a large quantity of apricots most of which I immediately ate.
+Time was moving on and I said my goodbyes to Aurelie and thanked her for the company. She said we might see each other again although I was heading for a different hostel in Belgrade to the one she was booked into. With a heavy heart I left my new friends and cycled out of Petrovaradin (&#1055;&#1077;&#1090;&#1088;&#1086;&#1074;&#1072;&#1088;&#1072;&#1076;&#1080;&#1085;). [Just like Stevens](http://www.strudel.org.uk/blog/stevens/000179.shtml) I had to trundle my way wearily up a shoulder of the Fru&scaron;ka Gora Mountains for a few kilometres. At the summit I was happy to find a fruit seller and promptly bought a large quantity of apricots most of which I immediately ate.
 
 ![landscape](https://farm1.staticflickr.com/321/19266336070_df450a4bc8.jpg "Fruit seller (lady on the right) with a customer (man on the left)")
 
@@ -29,7 +29,7 @@ As I got closer to Belgrade the density of traffic increased and I had to dodge 
 
 ![portrait](https://farm4.staticflickr.com/3771/19453916885_6bfb85e383.jpg "Zemun")
 
-In Zemun I had an incident where a car nearly knocked me off my bike because the guy wasn't looking where he was going. He did sound apologetic as I regained my composure and headed back towards the Danube.
+In Zemun (&#1047;&#1077;&#1084;&#1091;&#1085;) I had an incident where a car nearly knocked me off my bike because the guy wasn't looking where he was going. He did sound apologetic as I regained my composure and headed back towards the Danube.
 
 Once in Belgrade I headed towards the IYA hostel. It seemed to be teamed up with a travel agents next door. In the smokey offices of the travel agent, a friendly lady named Jelena told me they'd just had a big group booking so they had no space but she recommended another hostel to me and also told me how to get the internet working on my Serbian sim. I rode over to this second hostel which was in the bohemian district. I rang the bell and talked to the reception who buzzed me in. As I was struggling with the door someone came out to help me. It was [none other than Aurelie](https://twitter.com/RTWbike/status/610493395539230720)! It turned out this was the hostel she'd booked and she had arrived just a few minutes before me. What a brilliant coincidence. We ended up sharing a 4-bed dorm room with another touring cyclist - Jakob - who was cycling from Germany to China. 
 
