--- a/blog/2015044.md
+++ b/blog/2015044.md
@@ -13,7 +13,7 @@ The road out of Belgrade was long, straight and busy. Not the most pleasant cycl
 
 ![landscape](https://farm4.staticflickr.com/3887/19266473408_9dfe92424d.jpg "Serbian vinyard")
 
-In Smederevo I had a rest on a bench in the centre and a local man came up and asked me where I'd cycled from. He was very impressed and wished me well on the rest of my journey. I headed out of town and across the Danube on a big, daunting bridge. Over the bridge I was able to get off the road and onto the EuroVelo6 route that ran along the side of the river towards Kovin. 
+In Smederevo (&#1057;&#1084;&#1077;&#1076;&#1077;&#1088;&#1077;&#1074;&#1086;) I had a rest on a bench in the centre and a local man came up and asked me where I'd cycled from. He was very impressed and wished me well on the rest of my journey. I headed out of town and across the Danube on a big, daunting bridge. Over the bridge I was able to get off the road and onto the EuroVelo6 route that ran along the side of the river towards Kovin. 
 
 After Kovin the route continues along the top of a dyke for a few miles before I caught sight of the little sign for the Dunavski Pli&cacute;ak guest house. I was welcomed by Dragana - the owner - and a little later we were joined by Ale (short for Alessandro). Dragana's dad ran the bike shop in Kovin and Ales was from Italy so we had lots of interesting conversation. They'd set this up for the summer months and planned to go up to Novi Sad during the winter as Dragana had work at the university. Being one of the few bike-friendly guest houses along this part of the EuroVelo6 means they get to meet a good fraction of those cycling it. They'd met far more cyclists than I had in the past few days. Strangely, cycling along the route means you are unlikely to meet other cyclists as everyone is pretty much going the same direction (east). Add to that the fact I was often off the modern route to follow Thomas Stevens and my chances were even slimmer.
 
