--- a/blog/2015047.md
+++ b/blog/2015047.md
@@ -3,11 +3,11 @@ Title:	A day in Ni&scaron;
 Date:	2015-06-20T21:00:00+CEDT
 ---
 
-The people of Ni&scaron; are certainly happy that their team won the U20 world cup. Lots of beeping cars sporting Serbian flags this morning.
+The people of Ni&scaron; (&#1053;&#1080;&#1096;) are certainly happy that their team won the U20 world cup. Lots of beeping cars sporting Serbian flags this morning.
 
 Watching Murray vs Troicki with a Serb in Ni&scaron;. I actually cycled right by The Queen's Club on the way here about 6 weeks ago.
 
-My ability to read Cyrillic characters is slowly improving.
+My ability to read Cyrillic characters is slowly improving. Thanks to place names, I now know that &#1085;=n, &#1080;=i, &#1096;=&scaron;, &#1074;=v, &#1076;=d, &#1075;=g, &#1079;=z, &#1083;=l.
 
 ![portrait](https://farm1.staticflickr.com/349/19428192716_f8907c0ae4.jpg "Ni&scaron; concentration camp")
 
