--- a/blog/2015045.md
+++ b/blog/2015045.md
@@ -35,7 +35,7 @@ In the past year and a half lots of people have told me I must be very fit, expe
 
 ![landscape](https://farm1.staticflickr.com/390/19266600898_ddb5973f86.jpg "Serbia")
 
-The rest of the afternoon continued up the Morava valley along the 158 parallelling the A1 motorway. A few miles before Jagodina the motorway continued around a headland but the 158 headed up and over a hill giving me a bit of a workout followed by a coast downhill into the town. The internet claimed there was a campsite so I headed for that. It turned out to be up a very steep hill. It reminded me of the ride up to the vinyard back in Oberkirch.
+The rest of the afternoon continued up the Morava valley along the 158 parallelling the A1 motorway. A few miles before Jagodina (J&#1072;&#1075;&#1086;&#1076;&#1080;&#1085;&#1072;) the motorway continued around a headland but the 158 headed up and over a hill giving me a bit of a workout followed by a coast downhill into the town. The internet claimed there was a campsite so I headed for that. It turned out to be up a very steep hill. It reminded me of the ride up to the vinyard back in Oberkirch.
 
 I reached the campsite and found the lady who was working there. She was very friendly and even gave me a beer. We chatted a little in English. She was a trained architect but, with little work, she was working on the reception of this campsite. You could tell that architecture was her true passion and I hope she is able to go back to it. 
 
