--- a/blog/2015046.md
+++ b/blog/2015046.md
@@ -5,22 +5,32 @@ Distance:	65.8 miles
 Route:	tracks/2015-06-19.geojson
 ---
 
+I left the campsite on top of the hill in Jagodina (J&#1072;&#1075;&#1086;&#1076;&#1080;&#1085;&#1072;) and headed down the other side. Not before getting a view of Jagodina itself.
+
 ![landscape](https://farm4.staticflickr.com/3753/19454194515_fb8d45cb4b.jpg "Jagodina")
+
+In nearby &Cacute;uprija (&#1035;&#1091;&#1087;&#1088;&#1080;&#1112;&#1072;) I stopped in a sports bar for a toilet trip followed by a drink because I felt guilty just using the facilities. In the main square there was a nice finger post showing where I've been and where I'm going.
 
 ![portrait](https://pbs.twimg.com/media/CH2XPBLUEAALohE.jpg:large "Handy sign in &Cacute;uprija showing distances to where I've been and where I'm going (cycling distance is longer)")
 
 ![landscape](https://farm4.staticflickr.com/3927/19266644750_4851c1b560.jpg "Man on a bike")
 
+It was a lovely sunny day and I was starting to head up into the famous Balkan mountains. After the relative flat of the Danube since Austria, I knew the Balkan Mountains were my next (and last) major hills to get over. I wasn't really sure how steep they'd be. They couldn't be any worse than what I've been over on this trip.
+
 ![landscape](https://pbs.twimg.com/media/CH2wA5EWsAAdLAA.jpg:large "Heading towards the Balkan mountains")
 
-![landscape](https://farm1.staticflickr.com/547/19454207885_6f0190c0dc.jpg "Heading up into the Balkans")
+Off to the distance in the east was an amazingly conical mountain which made me think of Mt Fuji or mountains that kids would draw. It was very distinctive.
+
+![landscape](https://farm1.staticflickr.com/547/19454207885_6f0190c0dc.jpg "Heading up into the Balkans. The view to the east (left).")
 
 ![landscape](https://farm4.staticflickr.com/3939/19266655108_4d25468ccd.jpg "Serbian farmland")
 
 ![portrait](https://farm1.staticflickr.com/319/19266662148_184143e470.jpg "Serbian church")
 
+I was now heading up the Morava valley but on a local road that wound its way from side to side of the major motorway that continues on towards Bulgaria and Turkey. After a drink stop in the same town where Stevens had lunch, I headed out of town a couple of miles following the edge of the hill. I decided to stop for lunch at a high bend that commanded a stunning view of the Morava valley. Weirdly, the blue skies, flat farmland, big highway, and distant mountains reminded me of [California between Fairfield and Davis](http://www.strudel.org.uk/RTWbike/blog/0008.html).
+
 ![landscape](https://pbs.twimg.com/media/CH28Cq6WsAAfduk.jpg:large "Serbia is somehow reminding me of California between SF and Sacramento today")
 
 ![landscape](https://farm4.staticflickr.com/3739/19458518681_a081143402.jpg "Having a late lunch with a view of the Morava valley")
 
-I was an hour early into Ni&scaron;
+The riding was fairly pleasant as most of the traffic was on the motorway. I arrived into Ni&scaron; (&#1053;&#1080;&#1096;) an hour ahead of Stevens.
